fixed on mobile

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 
 /* Style the logo image */
 .logo-container img {
-    max-width: 60%; /* Restrict the maximum width of the logo */
+    max-width: 80%; /* Restrict the maximum width of the logo */
     margin-bottom: 20px; /* Add spacing below the logo */
 }
 
@@ -51,9 +51,9 @@ body {
 
 /* Style for the main title text */
 .main-title {
-    font-size: 3rem; /* Large font size for the title */
+    font-size: 4rem; /* Large font size for the title */
     margin: 20px 0; /* Vertical margin around the title */
-    padding: 20px 3; /* Add padding around the title */
+    padding: 30px 2; /* Add padding around the title */
     font-weight: 100; /* Use a lighter font weight */
 }
 
